fixed styling on mobile

--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ h2 {
 
     @media (max-width: 625px) {
         font-size: 18px;
+        padding-top: 25px;
     }
 }
 
@@ -70,7 +71,7 @@ h2 {
     width: 80%;
 
     @media (max-width: 625px) {
-        margin-top: 120px;
+        margin-top: 70px;
     }
 }
 
@@ -101,18 +102,19 @@ h2 {
     justify-content: center;
     margin: 80px auto 0 auto;
     max-width: 1000px;
+    padding-bottom: 70px;
     width: 90%;
 
     @media (max-width: 625px) {
-        margin-top: 45px;
+        margin-top: 25px;
     }
 }
 
 nav {
     align-items: center;
-    background-color: rgb(244, 244, 244);
+    background-color: rgb(241, 241, 241);
     display: flex;
-    min-height: 60px;
+    min-height: 62px;
     justify-content: center;
     position: fixed;
     top: 0;
